bin/testsuite/tests/compiler/src/errors/compiler4329.swg
#global testerror "Err0673"

alias A = s32
#test
{
    var x3: func(#type, y = 1)
}